# Skills

./: .gitignore  LICENSE  README.md
aggregate-news/: PREFERENCE.md  SKILL.md  __init__.py
aggregate-news/scripts/: Dockerfile  README.md  news_fetch.py  pyproject.toml  start-docker-container.sh  web_scrape.py
html-to-markdown/: PREFERENCE.md  README.md  SKILL.md
html-to-markdown/scripts/: Dockerfile  README.md  convert.ts  html-to-markdown.ts  start-docker-container.sh
tests/: README.md  test_aggregate_news.sh  test_html_to_markdown.sh
tests/data/: moltbook.json
tests/data/expected/: comment.md  moltbook-discussion.md  moltbook.md  post.md
write-tech-article/: PREFERENCE.md  PREFERENCE_TEMPLATE.md  README.md  SKILL.md
write-tech-article/references/: ARTICLE_STRUCTURE.md  SOURCE_HANDLING.md  WRITING_STYLE.md  WRITING_STYLE_FIRST_PERSON.md
