[project]
name = "app"
version = "0.1.0"
description = "Aggregate news from multiple sources including Hacker News and Product Hunt"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.57.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
package = false
